--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.1",
-    "helmet": "^4.6.0",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-router-transition": "^2.1.0",
