--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Carlos && Ponce",
+  "name": "Carlos && Ponce | Portfolio ",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://ttager.netlify.app/img/logo-new-top.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://ttager.netlify.app/img/logo-new.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://ttager.netlify.app/img/logo-new-top.png",
       "type": "image/png",
       "sizes": "512x512"
     }
@@ -23,3 +23,4 @@
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
+
