--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "start:react": "react-scripts start",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
+    "build:react": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
