--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.3.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "wrapping-letters": "^0.1.0"
   },
   "scripts": {
     "start:react": "react-scripts start",
